MDEV-6592 Assertion `ltime->day == 0' failed with TIMESTAMP, MAKETIME